--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -94,7 +94,7 @@ jobs:
             CLANG_VERSION: 11.0.0
             CUCUMBER_TIMEOUT: 60000
             ENABLE_CLANG_TIDY: ON
-            
+
           - name: mason-linux-debug-asan
             continue-on-error: false
             node: 12
@@ -502,7 +502,7 @@ jobs:
         cmake .. -DCMAKE_BUILD_TYPE=${BUILD_TYPE} \
                  -DENABLE_MASON=${ENABLE_MASON:-OFF} \
                  -DENABLE_ASSERTIONS=${ENABLE_ASSERTIONS:-OFF}} \
-                 -DENABLE_CLANG_TIDY=${ENABLE_ASSERTIONS:-OFF}} \
+                 -DENABLE_CLANG_TIDY=${ENABLE_CLANG_TIDY:-OFF}} \
                  -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS:-OFF} \
                  -DENABLE_COVERAGE=${ENABLE_COVERAGE:-OFF} \
                  -DENABLE_NODE_BINDINGS=${ENABLE_NODE_BINDINGS:-OFF} \
