--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -440,6 +440,8 @@ jobs:
 
     - name: Install dev dependencies
       run: |
+        python3 -m pip install conan --user
+        
         # CMake
         mkdir -p ${CMAKE_DIR}
         wget --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C ${CMAKE_DIR}
