--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -305,6 +305,7 @@ if(CMAKE_BUILD_TYPE MATCHES Release OR CMAKE_BUILD_TYPE MATCHES MinRelSize OR CM
   endif()
 endif()
 
+# TODO: this was added for Mason, we are not sure if it is true after migration to Conan
 if(UNIX AND NOT APPLE AND ENABLE_CONAN AND (LTO_WORKS OR ENABLE_GOLD_LINKER))
   message(WARNING "ENABLE_CONAN and ENABLE_LTO/ENABLE_GOLD_LINKER may not work on all linux systems currently")
   message(WARNING "For more details see: https://github.com/Project-OSRM/osrm-backend/issues/3202")
@@ -461,21 +462,22 @@ if(ENABLE_CONAN)
 
   include(${CMAKE_BINARY_DIR}/conan.cmake)
 
-  conan_cmake_run(REQUIRES boost/1.79.0 bzip2/1.0.8 expat/2.2.10 lua/5.4.4 tbb/2020.3 BASIC_SETUP BUILD missing CMAKE_TARGETS)
+  conan_cmake_run(REQUIRES boost/1.79.0 bzip2/1.0.8 expat/2.2.10 lua/5.4.4 tbb/2020.3 BASIC_SETUP BUILD missing)
   
 
-  find_package(Boost REQUIRED COMPONENTS ${BOOST_COMPONENTS})
+  find_package(Boost 1.79.0 EXACT REQUIRED COMPONENTS ${BOOST_COMPONENTS})
   add_dependency_includes(${BOOST_INCLUDE_DIRS})
 
-  find_package(bzip2 REQUIRED)
+  find_package(bzip2 1.0.8 EXACT REQUIRED)
   add_dependency_includes(${BZIP2_INCLUDE_DIRS})
 
-  find_package(expat REQUIRED)
+  find_package(expat 2.2.10 EXACT REQUIRED)
   add_dependency_includes(${EXPAT_INCLUDE_DIRS})
 
+  find_package(lua 5.4.4 EXACT REQUIRED)
   add_dependency_includes(${LUA_INCLUDE_DIRS})
 
-  find_package(TBB REQUIRED)
+  find_package(TBB 2020.3 EXACT REQUIRED)
   add_dependency_includes(${TBB_INCLUDE_DIRS})
 
   # note: we avoid calling find_package(Osmium ...) here to ensure that the
