--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -463,13 +463,12 @@ if(ENABLE_CONAN)
   include(${CMAKE_BINARY_DIR}/conan.cmake)
 
   set(CONAN_BOOST_VERSION "1.79.0")
-  set(CONAN_BZIP2_VERSION "1.79.0")
-  set(CONAN_EXPAR_VERSION "1.79.0")
-  set(CONAN_LUA_VERSION "1.79.0")
-  set(CONAN_TBB_VERSION "1.79.0")
+  set(CONAN_BZIP2_VERSION "1.0.8")
+  set(CONAN_EXPAT_VERSION "2.2.10")
+  set(CONAN_LUA_VTERSION "5.4.4")
+  set(CONAN_TBB_VERSION "2020.3")
   
-  conan_cmake_run(REQUIRES 
-    boost/${CONAN_BOOST_VERSION}
+  conan_cmake_run(REQUIRES boost/${CONAN_BOOST_VERSION}
     bzip2/${CONAN_BZIP2_VERSION}
     expat/${CONAN_EXPAT_VERSION}
     lua/${CONAN_LUA_VERSION}
