--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,16 @@ if (ENABLE_CLANG_TIDY)
   endif()
 endif()
 
+if(ENABLE_CONAN)
+  message(STATUS "Installing dependencies via conan")
+
+  if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
+    message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
+    file(DOWNLOAD "https://raw.githubusercontent.com/conan-io/cmake-conan/master/conan.cmake"
+                "${CMAKE_BINARY_DIR}/conan.cmake")
+  endif()
+endif()
+
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
@@ -450,12 +460,6 @@ add_subdirectory(${FLATBUFFERS_SRC_DIR}
 
 if(ENABLE_CONAN)
   message(STATUS "Installing dependencies via conan")
-
-  if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
-    message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
-    file(DOWNLOAD "https://raw.githubusercontent.com/conan-io/cmake-conan/master/conan.cmake"
-                "${CMAKE_BINARY_DIR}/conan.cmake")
-  endif()
 
   include(${CMAKE_BINARY_DIR}/conan.cmake)
 
