--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -440,7 +440,7 @@ jobs:
 
     - name: Install dev dependencies
       run: |
-        python3 -m pip install conan
+        python3 -m pip install conan==1.50.0
 
         # CMake
         mkdir -p ${CMAKE_DIR}
