--- a/scripts/ci/asan-ubsan.conf
+++ b/scripts/ci/asan-ubsan.conf
@@ -1,8 +1,10 @@
-[undefined]
-src:*/include/tbb/*
-src:*/include/boost/*
-src:*/third_party/sol2/*
-src:*/include/rapidjson/*
-src:*/util/log.cpp
-src:*/include/partitioner/cell_storage.hpp
-src:*/include/engine/internal_route_result.hpp
+vptr:src/util/log.cpp
+vptr:include/tbb/task.h
+enum:include/tbb/pipeline.h
+vptr:include/boost/smart_ptr/detail/shared_count.hpp
+vptr:include/boost/smart_ptr/detail/sp_counted_base_gcc_atomic.hpp
+vptr:src/tools/extract.cpp
+pointer-overflow:include/partitioner/cell_storage.hpp
+signed-integer-overflow:include/engine/internal_route_result.hpp
+pointer-overflow:third_party/sol2/sol/stack_core.hpp
+pointer-overflow:third_party/rapidjson/include/rapidjson/internal/stack.h
