--- a/scripts/ci/asan-ubsan.conf
+++ b/scripts/ci/asan-ubsan.conf
@@ -3,6 +3,9 @@ vptr:include/tbb/task.h
 enum:include/tbb/pipeline.h
 vptr:include/boost/smart_ptr/detail/shared_count.hpp
 vptr:include/boost/smart_ptr/detail/sp_counted_base_gcc_atomic.hpp
+vptr:include/boost/program_options/variables_map.hpp
+vptr:include/boost/program_options/value_semantic.hpp
+vptr:src/tools/contract.cpp
 vptr:src/tools/extract.cpp
 pointer-overflow:include/partitioner/cell_storage.hpp
 signed-integer-overflow:include/engine/internal_route_result.hpp
