--- a/scripts/ci/asan-ubsan.conf
+++ b/scripts/ci/asan-ubsan.conf
@@ -11,4 +11,4 @@ pointer-overflow:include/partitioner/cell_storage.hpp
 signed-integer-overflow:include/engine/internal_route_result.hpp
 pointer-overflow:third_party/sol2/sol/stack_core.hpp
 pointer-overflow:third_party/rapidjson/include/rapidjson/internal/stack.h
-nullability-arg:third_party/microtar/src/microtar.c
+nonnull-attribute:third_party/microtar/src/microtar.c
