--- a/scripts/ci/asan-ubsan.conf
+++ b/scripts/ci/asan-ubsan.conf
@@ -1,6 +1,7 @@
+enum:include/tbb/pipeline.h
 vptr:src/util/log.cpp
 vptr:include/tbb/task.h
-enum:include/tbb/pipeline.h
+vptr:include/tbb/parallel_reduce.h
 vptr:include/boost/smart_ptr/detail/shared_count.hpp
 vptr:include/boost/smart_ptr/detail/sp_counted_base_gcc_atomic.hpp
 vptr:include/boost/program_options/variables_map.hpp
