--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -95,15 +95,15 @@ jobs:
           #   CUCUMBER_TIMEOUT: 60000
           #   ENABLE_CLANG_TIDY: ON
 
-          # - name: mason-linux-debug-asan
-          #   continue-on-error: false
-          #   node: 12
-          #   runs-on: ubuntu-20.04
-          #   BUILD_TOOLS: ON
-          #   BUILD_TYPE: Release
-          #   CLANG_VERSION: 11.0.0
-          #   ENABLE_MASON: ON
-          #   ENABLE_SANITIZER: ON
+          - name: mason-linux-debug-asan
+            continue-on-error: false
+            node: 12
+            runs-on: ubuntu-20.04
+            BUILD_TOOLS: ON
+            BUILD_TYPE: Release
+            CLANG_VERSION: 11.0.0
+            ENABLE_MASON: ON
+            ENABLE_SANITIZER: ON
 
           # - name: mason-linux-release
           #   continue-on-error: false
