--- a/.github/workflows/osrm-backend.yml
+++ b/.github/workflows/osrm-backend.yml
@@ -556,7 +556,7 @@ jobs:
         npm run nodejs-tests
     - name: Upload test logs
       uses: actions/upload-artifact@v3
-      if: always()
+      if: failure()
       with:
         name: logs
         path: test/logs/
